documentation fixes